--- a/weak-strong-functors/weak-strong-functors.cabal
+++ b/weak-strong-functors/weak-strong-functors.cabal
@@ -4,6 +4,7 @@ author:              Juan Villa
 maintainer:          jvilla@stackbuilders.com
 build-type:          Simple
 cabal-version:       >=1.10
+tested-with:         GHC == 7.8.3
 
 library
   build-depends:       base >=4.7 && <4.8
